# xAI-Vercel-Hackathon

./: .gitignore  ID_INTEGRATION_README.md  README.md  example_usage.py  process.py  pyproject.toml  test_api.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/alert/: route.ts
frontend/app/api/alerts/: route.ts
frontend/app/api/location/: route.ts
frontend/app/api/locations/: route.ts
frontend/app/api/process-id/: route.ts
frontend/app/api/users/: route.ts
frontend/app/api/users/register/: route.ts
frontend/app/user/: page.tsx
frontend/components/admin/: AlertForm.tsx  UserList.tsx  UserMapView.tsx
frontend/components/ui/: Button.tsx  Card.tsx  FileUpload.tsx  Input.tsx  Select.tsx  Textarea.tsx
frontend/hooks/: useGeolocation.ts
frontend/lib/: config.ts
frontend/types/: api.ts
services/backend/: pyproject.toml  requirements.txt  vercel.json
services/backend/src/backend/: __init__.py  __main__.py  faq_loader.py  models.py  text_alerts.py  voice_alerts.py
services/backend/src/backend/events/: xai-vercel-hackathon.md
